# portfolio-builder-agent

./: Dockerfile  README.md  REFACTOR_SPEC.md  config.yml  docker-compose.yml  main.py  monitoring.py  plan.md  pyproject.toml  skills.md
.github/prompts/: basic_prompt.md  map-important-points.prompt.md
.github/workflows/: ci.yml  release.yml
src/: __init__.py  agent.py  agent_models.py  config.py  dashboard.py  data_client.py  input_guard.py  llm_service.py  llm_validation.py  logging_config.py  monitoring_api.py  plots.py  portfolio.py  portfolio_display_summary.py  prompt_validation.py  schemas.py  summaries.py  tickr_data_manager.py  tickr_summary_manager.py
src/agents/: base.py  creator.py  evaluator.py  orchestrator.py
src/etl/: __init__.py  agent_performance.py
src/event_store/: __init__.py  base.py  buffer.py  models.py  postgres_store.py  sqlite_store.py
src/tools/: __init__.py  allocate_weights.py  analyze_portfolio.py  build_summary.py  fetch_ticker_data.py  generate_tickers.py
tests/: test_agent.py  test_agents_init.py  test_allocate_weights.py  test_config.py  test_context.py  test_creator_agent.py  test_dashboard.py  test_data_client.py  test_etl_agent_performance.py  test_evaluator_agent.py  test_event_store.py  test_fetch_ticker_data.py  test_input_guard.py  test_llm_service.py  test_llm_service_events.py  test_llm_validation.py  test_logging_config.py  test_main.py  test_monitoring_api.py  test_monitoring_store.py  test_multi_portfolio.py  test_orchestrator_events.py  test_plots.py  test_portfolio.py  test_portfolio_display_summary.py  test_prompt_validation.py  test_schemas.py  test_summaries.py  test_tickr_data_manager.py  test_tickr_summary_manager.py
