# Added comments about using `--no-root` for dependency management
[tool.poetry]
name = "portfolio-builder-agent"
version = "0.1.0"
description = "An AI-powered stock analysis dashboard using Streamlit, Massive.com (Polygon.io), and OpenRouter."
authors = ["Divyansh Tripathi <your-email@example.com>"]
package-mode = false # Using Poetry for dependency management only, not for packaging or installing the project itself

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "*"
massive = "*"
openai = "*"
openrouter = "*"
pandas = "*"
numpy = "*"
matplotlib = "*"
omegaconf = "*"
plotly = "*"
fastapi = "*"
uvicorn = {version = "*", extras = ["standard"]}
requests = "*"

[tool.poetry.group.dev.dependencies]
ruff = "*"
mypy = "*"
pytest = "*"
pytest-cov = "*"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "T20"]
# E/F/W = pycodestyle + pyflakes, I = isort, N = pep8-naming,
# UP = pyupgrade, B = bugbear, SIM = simplify, T20 = print statements
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_empty = true

# Removed [tool.poetry.packages] as it is not needed when using --no-root

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"